--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -1,3 +1,11 @@
+body{
+  position:relative;
+  display:block;
+  width:100%;
+  overflow:hidden;
+  height:auto;
+  margin:0 auto;
+}
 .App {
   text-align: center;
 }
