--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,8 @@ body{
   position:relative;
   display:block;
   width:100%;
-  overflow:hidden;
+  overflow-x:hidden;
+  overflow-y:scroll;
   height:auto;
   margin:0 auto;
 }
